[package]
name = "abfall"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
parking_lot = "0.12.5"
v8 = { version = "142.1", optional = true }

[dev-dependencies]
criterion = "0.5"
dumpster = { version = "1.2.0" }
dumpster_derive = { version = "1.1.0" }

[features]
compare_dumpster = []
compare_cppgc = ["v8"]

[[bench]]
name = "gc_bench"
harness = false

[[bench]]
name = "compare"
harness = false
