[package]
name = "abfall"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Concurrent tri-color tracing garbage collector for Rust with incremental and concurrent mark-sweep"
readme = "README.md"
homepage = "https://github.com/HellButcher/abfall"
repository = "https://github.com/HellButcher/abfall"
documentation = "https://docs.rs/abfall"
keywords = ["garbage-collector","gc","concurrency","memory","tri-color"]
categories = ["memory-management","concurrency"]
rust-version = "1.90"

[dependencies]
parking_lot = "0.12.5"
v8 = { version = "0.84", optional = true }

[dev-dependencies]
criterion = "0.5"
dumpster = { version = "1.2.0" }
dumpster_derive = { version = "1.1.0" }

[features]
compare_dumpster = []
compare_cppgc = ["v8"]

[[bench]]
name = "gc_bench"
harness = false

[[bench]]
name = "compare"
harness = false
